# SELLM

./: .env.example  .gitignore  pom.xml
ai-smart-layer/: Dockerfile  pyproject.toml  requirements.txt
ai-smart-layer/app/: config.py  main.py
ai-smart-layer/app/adapters/: llm.py  media.py
ai-smart-layer/app/agents/: aids.py  qa.py  research.py  teaching.py
ai-smart-layer/app/rag/: embedder.py  pipeline.py  retriever.py
ai-smart-layer/tests/: test_aids.py  test_health.py  test_qa.py  test_research.py  test_teaching.py
backend/: pom.xml
docker/: .env.example  docker-compose.yml
docs/: DEPLOYMENT.md  USER_GUIDE.md
docs/spec/: special_edu_llm_spec.md
docs/superpowers/plans/: 2026-06-18-asd-assistant-admin-frontend.md  2026-06-18-asd-assistant-backend-core.md  2026-06-18-asd-assistant-persistence.md  2026-06-18-asd-assistant-rbac-v2.md  2026-06-18-asd-assistant-rest-auth.md  2026-06-19-asd-assistant-org-class.md  2026-06-20-agent-common.md  2026-06-20-agent-qa.md  (+25 more)
frontend/: INTEGRATION.md  index.html  package-lock.json  package.json  vite.config.js
miniprogram/: TESTING.md  WECHAT_LOGIN_RUNBOOK.md  automator.config.js  index.html  jest.config.js  package-lock.json  package.json  project.config.json
miniprogram/scripts/: wx-auto.cjs
miniprogram/src/: App.vue  manifest.json  pages.json
sellm-agent-aids/: pom.xml
sellm-agent-common/: pom.xml
sellm-agent-qa/: pom.xml
sellm-agent-research/: pom.xml
sellm-agent-teaching/: pom.xml
sellm-common/: pom.xml
sellm-common-backend/: pom.xml
sellm-common-core/: pom.xml
sellm-gateway/: pom.xml
(+562 files in other folders)
