[project]
name = "sellm-ai-smart-layer"
version = "0.1.0"
description = "SELLM 特教平台 Python 智能层(LangGraph + LlamaIndex + FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "langgraph==0.1.5",
    "langchain-core==0.2.10",
    "llama-index-core==0.10.50",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = ["pytest==8.2.2", "pytest-asyncio==0.23.7", "httpx==0.27.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
